src/compilador/test_semanticaErrores/badTypeAssig2.ctds
class badTypeAssig2{
	
int main(){
	int a;
	a=10;
	boolean bool;
	a+=bool; //error
}

}